# park-buddy

./: README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/resources/: data.cql  init.cql
backend/src/backend/: server.py
backend/src/backend/api/: __init__.py  floor.py  garage.py  parking_spots.py
backend/src/backend/database/: __init__.py  client.py  schema.py
backend/src/backend/routes/: __init__.py  floor_routes.py  garage_routes.py  parking_spot_routes.py
backend/tests/: conftest.py
backend/tests/api/: test_parking_spots.py
backend/tests/database/: test_client.py
scripts/: setup-cassandra.sh
